--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build:
     apt update && DEBIAN_FRONTEND=noninteractive apt -y install curl file gawk gpg jq unzip zip zstd
     ./build-package pull && ./build-package all ||:  # evade gpg signature return code
     tag="$(date +%Y%m%d)" auth="JOB-TOKEN: ${CI_JOB_TOKEN}"
-    for i in NanoDroid NanoDroid-MulchWebView; do
+    for i in NanoDroid NanoDroid-CromiteWebView; do
       echo "$(awk '{print $1}' "${i}-23.2.${tag}.zip.sha256")  ${i}-${tag}.zip" >"${i}-${tag}.zip.sha256"
       curl -s -o /dev/null -H "${auth}" -T "${i}-23.2.${tag}.zip" "${PACKAGE_URL}/${tag}/${i}-${tag}.zip"
       curl -s -o /dev/null -H "${auth}" -T "${i}-${tag}.zip.sha256" "${PACKAGE_URL}/${tag}/${i}-${tag}.zip.sha256"
@@ -22,7 +22,7 @@ build:
     paths:
     - "*.zip"
     - "*.zip.sha256"
-    expire_in: 1 week
+    expire_in: 1 hour
 
 publish:
   stage: deploy
@@ -41,7 +41,11 @@ publish:
       #  url: "${PACKAGE_URL}/$(date +%Y%m%d)/NanoDroid-BromiteWebView-$(date +%Y%m%d).zip"
       #- name: "NanoDroid-BromiteWebView-$(date +%Y%m%d) sha256"
       #  url: "${PACKAGE_URL}/$(date +%Y%m%d)/NanoDroid-BromiteWebView-$(date +%Y%m%d).zip.sha256"
-      - name: "NanoDroid-MulchWebView-$(date +%Y%m%d)"
-        url: "${PACKAGE_URL}/$(date +%Y%m%d)/NanoDroid-MulchWebView-$(date +%Y%m%d).zip"
-      - name: "NanoDroid-MulchWebView-$(date +%Y%m%d) sha256"
-        url: "${PACKAGE_URL}/$(date +%Y%m%d)/NanoDroid-MulchWebView-$(date +%Y%m%d).zip.sha256"
+      #- name: "NanoDroid-MulchWebView-$(date +%Y%m%d)"
+      #  url: "${PACKAGE_URL}/$(date +%Y%m%d)/NanoDroid-MulchWebView-$(date +%Y%m%d).zip"
+      #- name: "NanoDroid-MulchWebView-$(date +%Y%m%d) sha256"
+      #  url: "${PACKAGE_URL}/$(date +%Y%m%d)/NanoDroid-MulchWebView-$(date +%Y%m%d).zip.sha256"
+      - name: "NanoDroid-CromiteWebView-$(date +%Y%m%d)"
+        url: "${PACKAGE_URL}/$(date +%Y%m%d)/NanoDroid-CromiteWebView-$(date +%Y%m%d).zip"
+      - name: "NanoDroid-CromiteWebView-$(date +%Y%m%d) sha256"
+        url: "${PACKAGE_URL}/$(date +%Y%m%d)/NanoDroid-CromiteWebView-$(date +%Y%m%d).zip.sha256"
